--- a/sys-manage-vue/src/styles/index.scss
+++ b/sys-manage-vue/src/styles/index.scss
@@ -118,3 +118,25 @@ ul, li, ol {
     height: 0;
   }
 }
+
+.search-wrapper {
+  margin-bottom: 20px;
+  :deep(.el-card__body) {
+    padding-bottom: 2px;
+  }
+}
+
+.toolbar-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.table-wrapper {
+  margin-bottom: 20px;
+}
+
+.pager-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
