--- a/sys-manage-vue/src/styles/index.scss
+++ b/sys-manage-vue/src/styles/index.scss
@@ -120,9 +120,21 @@ ul, li, ol {
 }
 
 .search-wrapper {
-  margin-bottom: 20px;
-  :deep(.el-card__body) {
-    padding-bottom: 2px;
+  padding: 14px 21px 0;
+  margin-bottom: 8px;
+  background: #FFFFFF;
+  box-shadow: 0 1px 1px 0 rgba(94, 113, 129, 0.1);
+  border-radius: 3px;
+  border: 1px solid rgba(94, 113, 129, 0.1);
+
+  .el {
+    &-card__body {
+      padding: 0;
+    }
+
+    &-form-item {
+      margin-bottom: 14px;
+    }
   }
 }
 
